fix spacing on iframe

--- a/css/style.less
+++ b/css/style.less
@@ -1497,8 +1497,8 @@ footer.entry-meta {
 
 .project-content {
 	background: @grayF;
-	padding: 25px;
-	margin-bottom: 25px;
+	padding: 18px 25px 25px;
+	margin: 25px 0;
 	.project-section-title {
 		border-top: 1px solid #DDD; 
 		margin: 1em 0 0; 
